vlib/v/checker/tests/static_fn_call_no_struct_decl_err.vv
fn main() {
	Mystery.hey()
}

fn Mystery.hey() {
	println('hey')
}
